--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/peterWilson34/github-users#readme",
   "devDependencies": {
     "angular": "^1.6.2",
+    "angular-loading-bar": "^0.9.0",
     "angular-ui-router": "^0.4.2",
     "bootstrap": "^4.0.0-alpha.6",
     "express": "^4.14.1",
