--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "angular": "^1.6.2",
     "angular-loading-bar": "^0.9.0",
+    "angular-mocks": "^1.6.2",
     "angular-ui-router": "^0.4.2",
     "bootstrap": "^4.0.0-alpha.6",
     "express": "^4.14.1",
@@ -28,6 +29,12 @@
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-watch": "^4.3.11"
+    "gulp-watch": "^4.3.11",
+    "jasmine": "^2.5.3",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2"
   }
 }
