--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,1 @@
-node_modules/*
-!node_modules/angular
-!node_modules/angular-ui-router
-!node_modules/angular-loading-bar
-!node_modules/jquery
-!node_modules/foundation-sites
-!node_modules/angular-loading-bar
+node_modules
